--- a/src/styles/tools/_radius.css
+++ b/src/styles/tools/_radius.css
@@ -1,27 +1,7 @@
-.rounded-0 {
-  border-radius: 0!important;
-}
-
-.rounded-sm {
-  border-radius: 2px!important;
-}
-
-.rounded-md {
-  border-radius: 4px!important;
-}
-
-.rounded-lg {
-  border-radius: 8px!important;
-}
-
-.rounded-xl {
-  border-radius: 24px!important;
-}
-
-.rounded-pill {
-  border-radius: 9999px!important;
-}
-
-.rounded-circle {
-  border-radius: 50%!important;
-}
+.rounded-0 { border-radius: 0!important; }
+.rounded-sm { border-radius: 2px!important; }
+.rounded-md { border-radius: 4px!important; }
+.rounded-lg { border-radius: 8px!important; }
+.rounded-xl { border-radius: 24px!important; }
+.rounded-pill { border-radius: 9999px!important; }
+.rounded-circle { border-radius: 50%!important; }
