--- a/src/styles/tools/_typography.css
+++ b/src/styles/tools/_typography.css
@@ -46,9 +46,9 @@
 .td-overline { text-decoration: overline!important; }
 .td-underline { text-decoration: underline!important; }
 
-.text--primary { color: rgba(0,0,0,.87)!important; }
-.text--secondary { color: rgba(0,0,0,.6)!important; }
-.text--disabled { color: rgba(0,0,0,.38)!important; }
+.text-primary { color: rgba(0,0,0,.87)!important; }
+.text-secondary { color: rgba(0,0,0,.6)!important; }
+.text-disabled { color: rgba(0,0,0,.38)!important; }
 
 .text-lowercase { text-transform: lowercase!important; }
 .text-uppercase { text-transform: uppercase!important; }
