--- a/src/styles/tools/_flex.css
+++ b/src/styles/tools/_flex.css
@@ -1,26 +1,115 @@
-.flex {
-  display: -webkit-flex;
-  display: flex;
+.z-flex {
+  display: flex !important;
 }
 
-.wrap { flex-wrap: wrap; }
+.flex-row {
+  flex-direction: row !important;
+}
 
-.fdr { flex-direction: row; }
-.fdrr { flex-direction: row-reverse; }
-.fdc { flex-direction: column; }
-.fdcr { flex-direction: column-reverse; }
+.flex-row-reverse {
+  flex-direction: row-reverse !important;
+}
 
-.jcs { justify-content: flex-start; }
-.jcc { justify-content: center; }
-.jcb { justify-content: space-between; }
-.jca { justify-content: space-around; }
-.jce { justify-content: flex-end; }
+.flex-column {
+  flex-direction: column !important;
+}
 
-.ais { align-items: flex-start; }
-.aic { align-items: center; }
-.acb { align-content: space-between; }
-.aie { align-items: flex-end; }
+.flex-column-reverse {
+  flex-direction: column-reverse !important;
+}
 
-.ass { align-self: flex-start; }
-.asc { align-self: center; }
-.ase { align-self: flex-end; }
+.justify-start {
+  justify-content: flex-start !important;
+}
+
+.justify-end {
+  justify-content: flex-end !important;
+}
+
+.justify-center {
+  justify-content: center !important;
+}
+
+.justify-between {
+  justify-content: space-between !important;
+}
+
+.justify-around {
+  justify-content: space-around !important;
+}
+
+.align-start {
+  align-items: flex-start !important;
+}
+
+.align-end {
+  align-items: flex-end !important;
+}
+
+.align-center {
+  align-items: center !important;
+}
+
+.align-baseline {
+  align-items: baseline !important;
+}
+
+.align-stretch {
+  align-items: stretch !important;
+}
+
+.align-self-start {
+  align-self: flex-start !important;
+}
+
+.align-self-end {
+  align-self: flex-end !important;
+}
+
+.align-self-center {
+  align-self: center !important;
+}
+
+.align-self-baseline {
+  align-self: baseline !important;
+}
+
+.align-self-stretch {
+  align-self: stretch !important;
+}
+
+.align-self-auto {
+  align-self: auto !important;
+}
+
+.flex-nowrap {
+  flex-wrap: nowrap !important;
+}
+
+.flex-wrap {
+  flex-wrap: wrap !important;
+}
+
+.flex-wrap-reverse {
+  flex-wrap: wrap-reverse !important;
+}
+
+.align-content-start {
+  align-content: flex-start !important;
+}
+
+.align-content-end {
+  align-content: flex-end !important;
+}
+
+.align-content-center {
+  align-content: center !important;
+}
+
+.align-content-between {
+  align-content: space-between !important;
+}
+
+.align-content-around {
+  align-content: space-around !important;
+}
