--- a/packages/styles/styles.css
+++ b/packages/styles/styles.css
@@ -11,5 +11,10 @@
 }
 
 .z-input .z-messages {
-  position: absolute;
+  position: relative;
+  flex: 1 1 auto;
+  min-height: 14px;
+  line-height: 12px;
+  min-width: 1px;
+  font-size: 12px;
 }
