--- a/packages/styles/tools/_typography.css
+++ b/packages/styles/tools/_typography.css
@@ -1,3 +1,4 @@
+/* 字体大小 */
 .text-h1 {
   font-size: 6rem !important;
   line-height: 6rem;
@@ -34,6 +35,7 @@
   letter-spacing: .0125em !important;
 }
 
+/* 字体强调 */
 .fw-black {
   font-weight: 900 !important;
 }
@@ -62,6 +64,7 @@
   font-style: italic !important;
 }
 
+/* 文本对齐 */
 .text-left {
   text-align: left !important;
 }
@@ -74,6 +77,7 @@
   text-align: right !important;
 }
 
+/* 文本装饰 */
 .td-none {
   text-decoration: none !important;
 }
@@ -90,6 +94,7 @@
   text-decoration: underline !important;
 }
 
+/* 文本不透明度 */
 .text-primary {
   color: rgba(0, 0, 0, .87) !important;
 }
@@ -102,6 +107,7 @@
   color: rgba(0, 0, 0, .38) !important;
 }
 
+/* 文本变形 */
 .text-lowercase {
   text-transform: lowercase !important;
 }
@@ -114,8 +120,26 @@
   text-transform: capitalize !important;
 }
 
+/* 文本溢出 */
 .text-truncate {
   white-space: nowrap !important;
   text-overflow: ellipsis !important;
   overflow: hidden !important;
+}
+
+/* 元素显示类型 */
+.none {
+  display: none !important;
+}
+
+.inline {
+  display: inline !important;
+}
+
+.inline-block {
+  display: inline-block !important;
+}
+
+.block {
+  display: block !important;
 }
