--- a/packages/styles/tools/_typography.css
+++ b/packages/styles/tools/_typography.css
@@ -1,96 +1,32 @@
 /* 字体大小 */
 .text-h1 {
-  font-size: 6rem !important;
-  line-height: 6rem;
-  letter-spacing: -.015625em !important;
+  font-weight: 600;
+  font-size: 38px !important;
+  line-height: 1.23;
 }
 
 .text-h2 {
-  font-size: 3.75rem !important;
-  line-height: 3.75rem;
-  letter-spacing: -.0083333333em !important;
+  font-weight: 600;
+  font-size: 30px !important;
+  line-height: 1.35;
 }
 
 .text-h3 {
-  font-size: 3rem !important;
-  line-height: 3.125rem;
-  letter-spacing: normal !important;
+  font-weight: 600;
+  font-size: 24px !important;
+  line-height: 1.35;
 }
 
 .text-h4 {
-  font-size: 2.125rem !important;
-  line-height: 2.5rem;
-  letter-spacing: .0073529412em !important;
+  font-weight: 600;
+  font-size: 20px !important;
+  line-height: 1.4;
 }
 
 .text-h5 {
-  font-size: 1.5rem !important;
-  font-weight: 400;
-  letter-spacing: normal !important;
-}
-
-.text-h6 {
-  font-size: 1.25rem !important;
-  font-weight: 500;
-  letter-spacing: .0125em !important;
-}
-
-.text-subtitle-1 {
-  font-size: 1rem !important;
-  line-height: 1.75rem;
-  font-weight: 400;
-  letter-spacing: .009375em !important;
-  font-family: Roboto, sans-serif !important;
-}
-
-.text-subtitle-2 {
-  font-size: .875rem !important;
-  line-height: 1.375rem;
-  font-weight: 500;
-  letter-spacing: .0071428571em !important;
-  font-family: Roboto, sans-serif !important;
-}
-
-.text-body-1 {
-  font-size: 1rem !important;
-  line-height: 1.5rem;
-  font-weight: 400;
-  letter-spacing: .03125em !important;
-  font-family: Roboto, sans-serif !important;
-}
-
-.text-body-2 {
-  font-size: .875rem !important;
-  line-height: 1.25rem;
-  font-weight: 400;
-  letter-spacing: .0178571429em!important;
-  font-family: Roboto, sans-serif !important;
-}
-
-.text-button {
-  font-size: .875rem!important;
-  line-height: 2.25rem;
-  font-weight: 500;
-  letter-spacing: .0892857143em !important;
-  text-transform: uppercase !important;
-  font-family: Roboto,sans-serif!important;
-}
-
-.text-caption {
-  font-size: .75rem !important;
-  line-height: 1.25rem;
-  font-weight: 400;
-  letter-spacing: .0333333333em !important;
-  font-family: Roboto, sans-serif !important;
-}
-
-.text-overline {
-  font-size: .75rem !important;
-  line-height: 2rem;
-  font-weight: 500;
-  letter-spacing: .1666666667em !important;
-  text-transform: uppercase !important;
-  font-family: Roboto, sans-serif !important;
+  font-weight: 600;
+  font-size: 16px !important;
+  line-height: 1.5;
 }
 
 /* 字体强调 */
