--- a/packages/styles/styles.css
+++ b/packages/styles/styles.css
@@ -2,6 +2,7 @@
 @import './background.css';
 @import './flex.css';
 @import './float.css';
+@import './grid.css';
 @import './input.css';
 @import './margin.css';
 @import './nmargin.css';
