ci: 开发全局样式

--- a/packages/styles/background.css
+++ b/packages/styles/background.css
@@ -15,7 +15,7 @@
 /* 明黄 */
 .bg-yellow {
 	background-color: #fbbd08;
-	color: #333;
+	color: #fff;
 }
 
 /* 橄榄 */
@@ -89,7 +89,6 @@
 	background-color: #fff;
 	color: #666;
 }
-
 
 /* 浅色背景 START */
 
