--- a/packages/styles/styles.css
+++ b/packages/styles/styles.css
@@ -7,5 +7,5 @@
 @import './margin.css';
 @import './nmargin.css';
 @import './padding.css';
-@import './radius.css';
+@import './round.css';
 @import './text.css';
