--- a/packages/styles/text.css
+++ b/packages/styles/text.css
@@ -1,32 +1,53 @@
 /* 标题大小 */
 .text-h1 {
-  font-weight: 600;
-  font-size: 38px !important;
-  line-height: 1.23;
+  font-size: 6rem !important;
+  line-height: 6rem;
+  letter-spacing: -.015625em !important;
 }
 
 .text-h2 {
-  font-weight: 600;
-  font-size: 30px !important;
-  line-height: 1.35;
+  font-size: 3.75rem !important;
+  line-height: 3.75rem;
+  letter-spacing: -.0083333333em !important;
 }
 
 .text-h3 {
-  font-weight: 600;
-  font-size: 24px !important;
-  line-height: 1.35;
+  font-size: 3rem !important;
+  line-height: 3.125rem;
+  letter-spacing: normal !important;
 }
 
 .text-h4 {
-  font-weight: 600;
-  font-size: 20px !important;
-  line-height: 1.4;
+  font-size: 2.125rem !important;
+  line-height: 2.5rem;
+  letter-spacing: .0073529412em !important;
 }
 
 .text-h5 {
-  font-weight: 600;
-  font-size: 16px !important;
-  line-height: 1.5;
+  font-size: 1.5rem !important;
+  font-weight: 400;
+  letter-spacing: normal !important;
+}
+
+.text-h6 {
+  font-size: 1.25rem !important;
+  font-weight: 500;
+  letter-spacing: .0125em !important;
+}
+
+/* 副标题大小 */
+.text-subtitle-1 {
+  font-size: 1rem !important;
+  font-weight: 400;
+  line-height: 1.75rem;
+  letter-spacing: .009375em !important;
+}
+
+.text-subtitle-2 {
+  font-size: .875rem !important;
+  font-weight: 500;
+  line-height: 1.375rem;
+  letter-spacing: .0071428571em !important;
 }
 
 /* 字体强调 */
@@ -75,24 +96,24 @@
   text-align: right !important;
 }
 
-/* 文本装饰 */
-.td-none {
+/* 装饰线 */
+.text-none {
   text-decoration: none !important;
 }
 
-.td-line-through {
+.text-line-through {
   text-decoration: line-through !important;
 }
 
-.td-overline {
+.text-overline {
   text-decoration: overline !important;
 }
 
-.td-underline {
+.text-underline {
   text-decoration: underline !important;
 }
 
-/* 字体强调 */
+/* 不透明度 */
 .text-primary {
   color: rgba(0, 0, 0, .87) !important;
 }
@@ -105,7 +126,7 @@
   color: rgba(0, 0, 0, .38) !important;
 }
 
-/* 文本变形 */
+/* 变形 */
 .text-lowercase {
   text-transform: lowercase !important;
 }
@@ -127,7 +148,11 @@
   direction: ltr !important;
 }
 
-/* 文本溢出 */
+/* 文本换行和溢出 */
+.text-no-wrap {
+  white-space: nowrap !important;
+}
+
 .text-truncate {
   white-space: nowrap !important;
   text-overflow: ellipsis !important;
@@ -155,152 +180,152 @@
 
 /* 嫣红 */
 .text-red {
-	color: #e54d42;
+	color: #e54d42 !important;
 }
 
 /* 橘橙 */
 .text-orange {
-	color: #f37b1d;
+	color: #f37b1d !important;
 }
 
 /* 明黄 */
 .text-yellow {
-	color: #fbbd08;
+	color: #fbbd08 !important;
 }
 
 /* 橄榄 */
 .text-olive {
-	color: #8dc63f;
+	color: #8dc63f !important;
 }
 
 /* 森绿 */
 .text-green {
-	color: #39b54a;
+	color: #39b54a !important;
 }
 
 /* 天青 */
 .text-cyan {
-	color: #1cbbb4;
+	color: #1cbbb4 !important;
 }
 
 /* 海蓝 */
 .text-blue {
-	color: #0081ff;
+	color: #0081ff !important;
 }
 
 /* 姹紫 */
 .text-purple {
-	color: #6739b6;
+	color: #6739b6 !important;
 }
 
 /* 木槿 */
 .text-mauve {
-	color: #9c26b0;
+	color: #9c26b0 !important;
 }
 
 /* 桃粉 */
 .text-pink {
-	color: #e03997;
+	color: #e03997 !important;
 }
 
 /* 棕褐 */
 .text-brown {
-	color: #a5673f;
+	color: #a5673f !important;
 }
 
 /* 玄灰 */
 .text-grey {
-	color: #8799a3;
+	color: #8799a3 !important;
 }
 
 /* 草灰 */
 .text-gray {
-	color: #aaa;
+	color: #aaa !important;
 }
 
 /* 墨黑 */
 .text-black {
-	color: #333;
+	color: #333 !important;
 }
 
 /* 雅白 */
 .text-white {
-	color: #fff;
+	color: #fff !important;
 }
 
 /* 文字阴影 */
 
 /* 嫣红 */
 .text-shadow[class*="-red"] {
-	text-shadow: 6px 6px 8px rgba(204, 69, 59, 0.2);
+	text-shadow: 6px 6px 8px rgba(204, 69, 59, 0.2) !important;
 }
 
 /* 橘橙 */
 .text-shadow[class*="-orange"] {
-	text-shadow: 6px 6px 8px rgba(217, 109, 26, 0.2);
+	text-shadow: 6px 6px 8px rgba(217, 109, 26, 0.2) !important;
 }
 
 /* 明黄 */
 .text-shadow[class*="-yellow"] {
-	text-shadow: 6px 6px 8px rgba(224, 170, 7, 0.2);
+	text-shadow: 6px 6px 8px rgba(224, 170, 7, 0.2) !important;
 }
 
 /* 橄榄 */
 .text-shadow[class*="-olive"] {
-	text-shadow: 6px 6px 8px rgba(124, 173, 55, 0.2);
+	text-shadow: 6px 6px 8px rgba(124, 173, 55, 0.2) !important;
 }
 
 /* 森绿 */
 .text-shadow[class*="-green"] {
-	text-shadow: 6px 6px 8px rgba(48, 156, 63, 0.2);
+	text-shadow: 6px 6px 8px rgba(48, 156, 63, 0.2) !important;
 }
 
 /* 天青 */
 .text-shadow[class*="-cyan"] {
-	text-shadow: 6px 6px 8px rgba(28, 187, 180, 0.2);
+	text-shadow: 6px 6px 8px rgba(28, 187, 180, 0.2) !important;
 }
 
 /* 海蓝 */
 .text-shadow[class*="-blue"] {
-	text-shadow: 6px 6px 8px rgba(0, 102, 204, 0.2);
+	text-shadow: 6px 6px 8px rgba(0, 102, 204, 0.2) !important;
 }
 
 /* 姹紫 */
 .text-shadow[class*="-purple"] {
-	text-shadow: 6px 6px 8px rgba(88, 48, 156, 0.2);
+	text-shadow: 6px 6px 8px rgba(88, 48, 156, 0.2) !important;
 }
 
 /* 木槿 */
 .text-shadow[class*="-mauve"] {
-	text-shadow: 6px 6px 8px rgba(133, 33, 150, 0.2);
+	text-shadow: 6px 6px 8px rgba(133, 33, 150, 0.2) !important;
 }
 
 /* 桃粉 */
 .text-shadow[class*="-pink"] {
-	text-shadow: 6px 6px 8px rgba(199, 50, 134, 0.2);
+	text-shadow: 6px 6px 8px rgba(199, 50, 134, 0.2) !important;
 }
 
 /* 棕褐 */
 .text-shadow[class*="-brown"] {
-	text-shadow: 6px 6px 8px rgba(140, 88, 53, 0.2);
+	text-shadow: 6px 6px 8px rgba(140, 88, 53, 0.2) !important;
 }
 
 /*  玄灰 */
 .text-shadow[class*="-grey"] {
-	text-shadow: 6px 6px 8px rgba(114, 130, 138, 0.2);
+	text-shadow: 6px 6px 8px rgba(114, 130, 138, 0.2) !important;
 }
 
 /* 草灰 */
 .text-shadow[class*="-gray"] {
-	text-shadow: 6px 6px 8px rgba(114, 130, 138, 0.2);
+	text-shadow: 6px 6px 8px rgba(114, 130, 138, 0.2) !important;
 }
 
 /* 墨黑 */
 .text-shadow[class*="-black"] {
-	text-shadow: 6px 6px 8px rgba(26, 26, 26, 0.2);
+	text-shadow: 6px 6px 8px rgba(26, 26, 26, 0.2) !important;
 }
 
 /* 雅白 */
 .text-shadow[class*="-white"] {
-	text-shadow: 6px 6px 8px rgba(255, 255, 255, 0.2);
+	text-shadow: 6px 6px 8px rgba(255, 255, 255, 0.2) !important;
 }
