ci: 开发全局样式

--- a/packages/styles/styles.css
+++ b/packages/styles/styles.css
@@ -1,5 +1,6 @@
 @import './elevation.css';
 @import './background.css';
+@import './display.css';
 @import './flex.css';
 @import './float.css';
 @import './grid.css';
