--- a/packages/styles/grid.css
+++ b/packages/styles/grid.css
@@ -1,149 +1,130 @@
-.z-row {
+.row {
   display: flex;
   flex-wrap: wrap;
   flex: 1 1 auto;
 }
 
-.z-col-24 {
+.row [class*="col-"] {
   display: block;
+  padding: 0;
+}
+
+.col-24 {
   flex: 0 0 100%;
   max-width: 100%;
 }
 
-.z-col-23 {
-  display: block;
+.col-23 {
   flex: 0 0 95.83333333%;
   max-width: 95.83333333%;
 }
 
-.z-col-22 {
-  display: block;
+.col-22 {
   flex: 0 0 91.66666667%;
   max-width: 91.66666667%;
 }
 
-.z-col-21 {
-  display: block;
+.col-21 {
   flex: 0 0 87.5%;
   max-width: 87.5%;
 }
 
-.z-col-20 {
-  display: block;
+.col-20 {
   flex: 0 0 83.33333333%;
   max-width: 83.33333333%;
 }
 
-.z-col-19 {
-  display: block;
+.col-19 {
   flex: 0 0 79.16666667%;
   max-width: 79.16666667%;
 }
 
-.z-col-18 {
-  display: block;
+.col-18 {
   flex: 0 0 75%;
   max-width: 75%;
 }
 
-.z-col-17 {
-  display: block;
+.col-17 {
   flex: 0 0 70.83333333%;
   max-width: 70.83333333%;
 }
 
-.z-col-16 {
-  display: block;
+.col-16 {
   flex: 0 0 66.66666667%;
   max-width: 66.66666667%;
 }
 
-.z-col-15 {
-  display: block;
+.col-15 {
   flex: 0 0 62.5%;
   max-width: 62.5%;
 }
 
-.z-col-14 {
-  display: block;
+.col-14 {
   flex: 0 0 58.33333333%;
   max-width: 58.33333333%;
 }
 
-.z-col-13 {
-  display: block;
+.col-13 {
   flex: 0 0 54.16666667%;
   max-width: 54.16666667%;
 }
 
-.z-col-12 {
-  display: block;
+.col-12 {
   flex: 0 0 50%;
   max-width: 50%;
 }
 
-.z-col-11 {
-  display: block;
+.col-11 {
   flex: 0 0 45.83333333%;
   max-width: 45.83333333%;
 }
 
-.z-col-10 {
-  display: block;
+.col-10 {
   flex: 0 0 41.66666667%;
   max-width: 41.66666667%;
 }
 
-.z-col-9 {
-  display: block;
+.col-9 {
   flex: 0 0 37.5%;
   max-width: 37.5%;
 }
 
-.z-col-8 {
-  display: block;
+.col-8 {
   flex: 0 0 33.33333333%;
   max-width: 33.33333333%;
 }
 
-.z-col-7 {
-  display: block;
+.col-7 {
   flex: 0 0 29.16666667%;
   max-width: 29.16666667%;
 }
 
-.z-col-6 {
-  display: block;
+.col-6 {
   flex: 0 0 25%;
   max-width: 25%;
 }
 
-.z-col-5 {
-  display: block;
+.col-5 {
   flex: 0 0 20.83333333%;
   max-width: 20.83333333%;
 }
 
-.z-col-4 {
-  display: block;
+.col-4 {
   flex: 0 0 16.66666667%;
   max-width: 16.66666667%;
 }
 
-.z-col-3 {
-  display: block;
+.col-3 {
   flex: 0 0 12.5%;
   max-width: 12.5%;
 }
 
-.z-col-2 {
-  display: block;
+.col-2 {
   flex: 0 0 8.33333333%;
   max-width: 8.33333333%;
 }
 
-.z-col-1 {
-  display: block;
+.col-1 {
   flex: 0 0 4.16666667%;
   max-width: 4.16666667%;
 }
