--- a/packages/styles/round.css
+++ b/packages/styles/round.css
@@ -1,3 +1,23 @@
+.solid {
+  border: 1px solid rgba(0, 0, 0, .12);
+}
+
+.solid-top {
+  border-top: 1px solid rgba(0, 0, 0, .12);
+}
+
+.solid-right {
+  border-right: 1px solid rgba(0, 0, 0, .12);
+}
+
+.solid-bottom {
+  border-bottom: 1px solid rgba(0, 0, 0, .12);
+}
+
+.solid-left {
+  border-left: 1px solid rgba(0, 0, 0, .12);
+}
+
 .rounded-0 {
   border-radius: 0 !important;
 }
